@@ -6,13 +6,13 @@ import static org.junit.Assert.assertNotSame;
 import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertSame;
 import static org.junit.Assert.assertTrue;
-import static org.powermock.PowerMock.createMock;
-import static org.powermock.PowerMock.expectPrivate;
-import static org.powermock.PowerMock.createPartialMock;
-import static org.powermock.PowerMock.replay;
-import static org.powermock.PowerMock.verify;
-import static org.powermock.Whitebox.invokeMethod;
-import static org.powermock.Whitebox.setInternalState;
+import static org.powermock.api.easymock.PowerMock.createMock;
+import static org.powermock.api.easymock.PowerMock.expectPrivate;
+import static org.powermock.api.easymock.PowerMock.createPartialMock;
+import static org.powermock.api.easymock.PowerMock.replay;
+import static org.powermock.api.easymock.PowerMock.verify;
+import static org.powermock.reflect.Whitebox.invokeMethod;
+import static org.powermock.reflect.Whitebox.setInternalState;
 
 import java.util.HashSet;
 import java.util.Set;
